# apex-engine

./: .gitignore  CMakeLists.txt  imgui.ini  run.sh
assets/shaders/: fragment.glsl  post_fragment.glsl  sky_fragment.glsl  sky_vertex.glsl  vertex.glsl
config/: post_processing.cfg
src/: main.c  ui_bridge.cpp
src/renderer/: glad.c  shader.c  shader.h
